feat: add redis

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,11 @@ DB_PASSWORD=password
 DB_IS_SSL=true
 DB_CA_CERT=ca.pem #ca filename, placed in config/ssl/
 
+# Redis
+REDIS_USERNAME=username
+REDIS_PASSWORD=password
+REDIS_HOST=host
+REDIS_PORT=1111
+
 # JWT
 JWT_SECRET_KEY=3EYw8ON4LRETbvzmRI1LVCmbcsyYT10W
