--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
+    "cross-env": "^10.1.0",
     "nodemon": "^3.1.10",
     "sequelize-cli": "^6.6.3"
   },
